FW: just clear styles.css

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="logo">            
                 <!-- не хочет на сервере загружаться с относительного пути.... hpr( -->
                 <!-- <img src="/img/img-togas-lp3/logo-freestand-03.png" alt="Togas" class="img-fluid mt-4"> -->
-                <img src="https://media1.togas.com/media/couture/img/img-togas-lp3/logo-freestand-03.png" alt="Togas" class="img-fluid mt-4">
+                <img src="/media/couture/img/img-togas-lp3/logo-freestand-03.png" alt="Togas" class="img-fluid mt-4">
             </div>
 
         </div>  
@@ -100,7 +100,7 @@
          <div class="third-col">
             <!-- не хочет на сервере загружаться с относительного пути.... hpr( -->
             <!-- <div class="sublogo align-self-center"><img src="/img/img-togas-lp3/sign-shadow02.png" alt="Custom-made" class="img-fluid"></div> -->
-            <div class="sublogo align-self-center"><img src="https://media1.togas.com/media/couture/img/img-togas-lp3/sign-shadow02.png" alt="Custom-made" class="img-fluid"></div>
+            <div class="sublogo align-self-center"><img src="/media/couture/img/img-togas-lp3/sign-shadow02.png" alt="Custom-made" class="img-fluid"></div>
         </div>
 
 <!-- MODAL WINDOW -->
