--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-<!-- DEBUG from smartgrid :: container 1140px 12 columns-->
+<!-- DEBUG from smartgrid :: container 1140px 12 columns :: DON'T DELETE, PLS-->
 <!-- <div class="debug">
     <div>
         <div>
@@ -83,7 +83,6 @@
 
             <!-- LOGO -->  
             <div class="logo">            
-                <!-- не хочет на сервере загружаться с относительного пути.... hpr( -->
                 <!-- <img src="/img/img-togas-lp3/logo-freestand-03.png" alt="Togas" class="img-fluid mt-4"> -->
                 <img src="/media/couture/img/img-togas-lp3/logo-freestand-03.png" alt="Togas" class="img-fluid mt-4">
             </div>
@@ -98,7 +97,6 @@
         </div>
                 
          <div class="third-col">
-            <!-- не хочет на сервере загружаться с относительного пути.... hpr( -->
             <!-- <div class="sublogo align-self-center"><img src="/img/img-togas-lp3/sign-shadow02.png" alt="Custom-made" class="img-fluid"></div> -->
             <div class="sublogo align-self-center"><img src="/media/couture/img/img-togas-lp3/sign-shadow02.png" alt="Custom-made" class="img-fluid"></div>
         </div>
@@ -260,7 +258,6 @@
                 <p class="txt-sub-cm">The most premium<br>inspiring fabrics that excel<br>in quality and style!</p>
                 <!--Button-->
                 <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target=".bd-example-modal-lg">Discover</button>
-                <!--  <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#fabricsModalCenter">Discover</button> -->
             </div>
 
         </div>
@@ -268,26 +265,9 @@
     </div>
     <!-- Column -->
 
-<!-- !!!!!TEST ONLY!!!!!! :: Button "Fabric" as collapsible block-->
-<!--                   <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="fa" aria-hidden="true"></i>Discover</button>
-            </div>
-        </div> -->
-        <!--/.Card-->
-   <!--  </div> -->
-    <!-- Column -->
-
-     <!-- DATA TOGGLE SECTION -->
-<!--         <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-            </div>
-        </div> -->
-    <!-- /DATA TOGGLE SECTION -->
-<!-- !!!!!TEST ONLY!!!!!! -->
-
     <!-- Modal Fabrics-->
     <div class="modal fade bd-example-modal-lg" id="fabricsModalCenter" tabindex="-1" role="dialog" aria-labelledby="fabricsModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-dialog modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3 pl-4 ml-1" id="fabricsleModalCenterTitle">Fabrics</h4>           
@@ -358,7 +338,7 @@
 
     <!-- Modal Shades-->
     <div class="modal fade" id="shadesModalCenter" tabindex="-1" role="dialog" aria-labelledby="shadesModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg" role="document">
+      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3" id="shadesModalCenterTitle">Shades</h4>           
@@ -430,7 +410,7 @@
 
      <!-- Modal Upholstery-->
     <div class="modal fade" id="upholsteryModalCenter" tabindex="-1" role="dialog" aria-labelledby="upholsteryModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg" role="document">
+      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3" id="upholsteryModalCenterTitle">Upholstery</h4>           
@@ -502,7 +482,7 @@
 
      <!-- Modal Custom drapes-->
     <div class="modal fade" id="drapesModalCenter" tabindex="-1" role="dialog" aria-labelledby="drapesModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg" role="document">
+      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3" id="drapesModalCenterTitle">Custom draparies</h4>           
@@ -568,7 +548,7 @@
 
      <!-- Modal Custom drapes-->
     <div class="modal fade" id="headboardsModalCenter" tabindex="-1" role="dialog" aria-labelledby="headboardsModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg" role="document">
+      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3" id="headboardsModalCenterTitle">Custom draparies</h4>           
@@ -634,7 +614,7 @@
 
      <!-- Modal Custom drapes-->
     <div class="modal fade" id="accessoriesModalCenter" tabindex="-1" role="dialog" aria-labelledby="accessoriesModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg" role="document">
+      <div class="modal-dialog modal-dialog-centered bd-example-modal-lg modal-bg-wh" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title card-title service-title py-3" id="accessoriesModalCenterTitle">Hardware & Accessories</h4>           
