--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content modal-bg pb-5">
             <div class="modal-header-togas-top text-center mb-4">
-                <h4 class="modal-title w-100">Talk with our expert on +1 212 300 2876</h4>
+                <h4 class="modal-title-top w-100">Talk with our expert on +1 212 300 2876</h4>
 
             </div>
             <div class="modal-body mx-5">
@@ -743,9 +743,9 @@
     <!--Card content-->        
     <div class="card-body">
         <!--Title-->
-        <h5 class="experts-name my-3">Lilia<br>Khayrova</h5>
+        <h5 class="experts-name my-3">Lila<br>Khayrova</h5>
         <h6 class="subscript-center pb-3">head designer</h6>
-        <p class="card-text">As a Partner Both in Life and Business With Kostas Togas, Nellia Togas is heiress to a hereditary know-how and an expert in window treatments. Beyond simple functionality, her creations embody emotional, cultural and aesthetic values.</p>
+        <p class="card-text">After Lila got her degree in Consumer Goods specialized as a “designer-constructor of women’s clothes”, she studied Fashion Design. She now works as a designer for the “Sadovaya-Sukharevskaya” boutique. She believes that working at Togas gives her the opportunity of professional growth, as she participates in challenging projects, as well as the chance to meet and communicate with outstanding people.</p>
     </div>
 </div>       
 <!--/.Card-->
