FH: Section-second "Create the home of your dreams" well done. Styles.grid. It's work!

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </div> -->
 <!-- /DEBUG from smartgrid -->
 
-<header id="top-slider" class="">
+<header id="top-slider" class="mb-5">
 
     <div class="header-block">
 
@@ -331,12 +331,14 @@
         <!-- /MODAL WINDOW -->
 
 <!-- SECTION :: create-dreams -->
-<section id="create-dreams">
+<section id="create-dreams" class="mt-5">
+    <!-- class="mt-5" DELETE -->
 <div class="container mt-5 mb-5">
-    <div class="row row-margin">
-        <div class="col-sm-12 col-md-8">
+    <div class="row row-margin mt-5">
+        <!-- class="mt-5" DELETE -->
+        <div class="col-sm-12 col-md-8 mt-4 pr-5">
         <h1 class="section-title">Create the home<br>of your dreams</h1>
-            <h6 class="subscript-one pt-3">mod eaquiaspet&nbsp;&nbsp;<span><img src="img/img-togas-lp3/line-02-right-09.svg" width="150" alt=""></span></h6>
+            <h6 class="subscript-one pt-4 pb-2">mod eaquiaspet&nbsp;&nbsp;<span><img src="img/img-togas-lp3/line-02-right-09.svg" width="150" alt=""></span></h6>
                 <img src="img/img-togas-lp3/create2.jpg" alt="" class="img-fluid d-block d-md-none w-50 my-4 float-left float-md-none pr-3 pr-sm-5">
                 <p class="text-justify txt-p py-4">For almost a century, Togas has been a pioneer in quality textiles, bringing luxury and impeccable style to homes and venues all around the world. While Togas remains proud of its history and Greek heritage, it is a global manufacturer and retailer in its own field, having earned the confidence of its worldwide customers by creating over 3,000 products that excel in quality, beauty and style.</p> 
                 <p class="text-justify txt-p pb-4">Providing exceptional bespoke customer service with made-to-measure collections for you, our customers, is our top priority. We develop unique products and apply them to every need, therefore enabling you to find the perfect design and fabric in order to master your home decoration. Each of our bespoke items is an exceptionally balanced and harmonized masterpiece. The meticulous attention to detail and the professional craftsmanship used are essential to our service.</p> 
@@ -344,11 +346,14 @@
                 <p class="text-justify txt-p pb-4">We incorporate classic motifs into modern designs, reinventing vintage looks to suit the contemporary customer; apart from the popular hand-drawn floral, classic and geometric designs, the Art-Deco motif is very typical. Our products are inspired by our close involvement with different countries and our interest in their cultural trends. Every pattern is infused with feelings and images of nature, art and culture. When it comes to made-to-measure bespoke tailoring, Togas has the team and the expertise to help you realize your vision of a beautiful interior. From the upscale eclectic to the urban chic, Togas has something for everybody.
                 </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex flex-column align-items-end mt-5 pl-5 pl-sm-3">
         <div class="view zoom">
-            <img src="img/img-togas-lp3/create.png" alt="" class="img-fluid d-none d-md-block">
+            <img src="img/img-togas-lp3/create.png" alt="Create the home of your dreams" class="img-fluid d-none d-md-block pl-md-4 ">
         </div>
-            <p class="text-left txt-under d-flex align-self-end py-md-5">Providing exceptional bespoke service with madeto-measure collections for our customers is our top priority. We develop unique products and apply them to every need, therefore enabling you to find the perfect design and fabric in order to master your home decoration.</p>
+        <div class="py-md-5 pl-sm-0 pl-md-4 mt-lg-4">
+            <p class="text-left txt-under">Providing exceptional bespoke service with made-to-measure collections for our customers is our top priority. We develop unique products and apply them to every need, therefore enabling you to find the perfect design and fabric in order to master your home decoration.</p>
+        </div>
+            
     </div>
 </div>
 </section>
