FH: adjusting "Our story"_1

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Lila<br>Khayrova</h5>
                 <h6 class="subscript-center pb-3">head designer</h6>
-                <p class="card-text">After Lila got her degree in Consumer Goods specialized as a “designer-constructor of women’s clothes”, she studied Fashion Design. She now works as a designer for the “Sadovaya-Sukharevskaya” boutique. She believes that working at Togas gives her the opportunity ..<!--of professional growth, as she participates in challenging projects, as well as the chance to meet and communicate with outstanding people. --></p>
+                <p class="card-text">After Lila got her degree in Consumer Goods specialized as a “designer-constructor of women’s clothes”, she studied Fashion Design. She now works as a designer for the “Sadovaya-Sukharevskaya” boutique. She believes that working at Togas gives her the opportunity of professional growth, as she participates in challenging projects, as well as the chance to meet and communicate with outstanding people. </p>
             </div>
         </div>       
         <!--/.Card-->
@@ -1319,19 +1319,19 @@
 
                  <div class="tab-content mb-4" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="pills-1926" role="tabpanel" aria-labelledby="pills-1926-tab">
-                        <p class="card-text">After the end of WW1, the young and talented Ilias Togas moves to Athens from Arcadia, a region in southern Greece. Ilias founds a small atelier at the dawn of Art Deco epoque. The high-quality craftsmanship makes Ilias Togas well-known throughout Greece.</p>
+                        <p class="card-text text-center text-md-left">After the end of WW1, the young and talented Ilias Togas moves to Athens from Arcadia, a region in southern Greece. Ilias founds a small atelier at the dawn of Art Deco epoque. The high-quality craftsmanship makes Ilias Togas well-known throughout Greece.</p>
                     </div>
                     <div class="tab-pane fade" id="pills-1945" role="tabpanel" aria-labelledby="pills-1945-tab">
                         <!-- <h4 class="title-year pt-1" id="1945">1945</h4> -->
-                        <p class="card-text">WW2 comes to its end and Ilias Togas marries Katerina Schik, the daughter of a famous textile-manufacturing dynasty of Austrian origin. The love match leads to the union of the two businesses. Togas now combines production with retail and a unique family business empire is established.</p>
+                        <p class="card-text text-center text-md-left">WW2 comes to its end and Ilias Togas marries Katerina Schik, the daughter of a famous textile-manufacturing dynasty of Austrian origin. The love match leads to the union of the two businesses. Togas now combines production with retail and a unique family business empire is established.</p>
                     </div>
                     <div class="tab-pane fade" id="pills-1970" role="tabpanel" aria-labelledby="pills-1970-tab">
                         <!-- <h4 class="title-year pt-1" id="1970">1970</h4> -->
-                        <p class="card-text">In the early 1970s sons of Ilias, Pavlos and Dimitris Togas, inherit the family business. The brothers decide to expand the company into the home textile industry. They use the recourses of the factory and the embroidery machines while utilizing the expertise handed down to them by their father.</p>
+                        <p class="card-text text-center text-md-left">In the early 1970s sons of Ilias, Pavlos and Dimitris Togas, inherit the family business. The brothers decide to expand the company into the home textile industry. They use the recourses of the factory and the embroidery machines while utilizing the expertise handed down to them by their father.</p>
                     </div>
                     <div class="tab-pane fade" id="pills-1995" role="tabpanel" aria-labelledby="pills-1995-tab">
                         <!-- <h4 class="title-year pt-1" id="1995">1995</h4> -->
-                        <p class="card-text">Since 1995, the family story grows even more with the arrival of Pavlos’ son, Kostas Togas. He is the one that will initiate the expansion of the Togas sales network to new markets all around the world. Custom service is now Togas’ priority, mastering the service and bringing it to another level.</p>
+                        <p class="card-text text-center text-md-left">Since 1995, the family story grows even more with the arrival of Pavlos’ son, Kostas Togas. He is the one that will initiate the expansion of the Togas sales network to new markets all around the world. Custom service is now Togas’ priority, mastering the service and bringing it to another level.</p>
                     </div>
                  </div>
 
